--- a/style.css
+++ b/style.css
@@ -111,8 +111,11 @@ hr {
 .container {
 	width: 68%;
 	margin: 5em auto;
-	max-width: 520px;
+	max-width: 430px;
 	text-align: center;
+	@media screen and (min-width: 500px){
+		margin: 6.5em auto;
+	}
 }
 
 .container--narrow {
